--- a/README
+++ b/README
@@ -7,3 +7,18 @@ A 960 based theme for CakePHP 2.1
 
 clone the repo to the 
  * app/View/Themed/ directory
+
+
+To switch the theme try this in your AppController
+
+class AppController extends Controller {
+	public $viewClass = 'Theme';
+
+		....
+
+
+
+	function beforeFilter() {
+		parent::beforeFilter();
+		$this->theme='960-fluid';
+	}
